Grammar/output/WhileParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g 2023-12-11 09:46:46

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class WhileParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EQUAL", "FUNCTION", "PROGRAM", "INPUTS", "OUTPUTS", "COMMANDS", "IF", "WHILE", "FOR", "FOREACH", "NOP", "NIL", "CONS", "LIST", "HD", "TL", "SYMB", "VARS", "EXPRS", "CONDITION", "NOM", "THEN", "ELSE", "Variable", "Symbol", "'function'", "':'", "'read'", "'%'", "'write'", "','", "';'", "'nop'", "':='", "'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'od'", "'for'", "'foreach'", "'in'", "'nil'", "'('", "'cons'", "')'", "'list'", "'hd'", "'tl'", "'=?'"
    };
    public static final int EOF=-1;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int EQUAL=4;
    public static final int FUNCTION=5;
    public static final int PROGRAM=6;
    public static final int INPUTS=7;
    public static final int OUTPUTS=8;
    public static final int COMMANDS=9;
    public static final int IF=10;
    public static final int WHILE=11;
    public static final int FOR=12;
    public static final int FOREACH=13;
    public static final int NOP=14;
    public static final int NIL=15;
    public static final int CONS=16;
    public static final int LIST=17;
    public static final int HD=18;
    public static final int TL=19;
    public static final int SYMB=20;
    public static final int VARS=21;
    public static final int EXPRS=22;
    public static final int CONDITION=23;
    public static final int NOM=24;
    public static final int THEN=25;
    public static final int ELSE=26;
    public static final int Variable=27;
    public static final int Symbol=28;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "commandFor", "inputSub", "output", "exprBase3", 
        "commandNop", "commands", "input", "exprs", "program", "vars", "function", 
        "lexpr", "command", "exprBase4", "definition", "commandForeach", 
        "commandWhile", "exprBase", "commandEqual", "exprBase1", "expression", 
        "commandIf", "exprBase2"
    };
    public static final boolean[] decisionCanBacktrack = new boolean[] {
        false, // invalid decision
        false, false, false, false, false, false, false, false, false, 
            false, false, false, false, false, false
    };

     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public WhileParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public WhileParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public WhileParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return WhileParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:39:1: program : function ( program )? -> ^( PROGRAM ( function )+ ) ;
    public final WhileParser.program_return program() throws RecognitionException {
        WhileParser.program_return retval = new WhileParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        WhileParser.function_return function1 = null;

        WhileParser.program_return program2 = null;


        RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");
        RewriteRuleSubtreeStream stream_program=new RewriteRuleSubtreeStream(adaptor,"rule program");
        try { dbg.enterRule(getGrammarFileName(), "program");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(39, 1);

        try {
            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:40:2: ( function ( program )? -> ^( PROGRAM ( function )+ ) )
            dbg.enterAlt(1);

            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:40:4: function ( program )?
            {
            dbg.location(40,4);
            pushFollow(FOLLOW_function_in_program188);
            function1=function();

            state._fsp--;

            stream_function.add(function1.getTree());
            dbg.location(40,13);
            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:40:13: ( program )?
            int alt1=2;
            try { dbg.enterSubRule(1);
            try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==29) ) {
                alt1=1;
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:40:13: program
                    {
                    dbg.location(40,13);
                    pushFollow(FOLLOW_program_in_program190);
                    program2=program();

                    state._fsp--;

                    stream_program.add(program2.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(1);}



            // AST REWRITE
            // elements: function
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 40:22: -> ^( PROGRAM ( function )+ )
            {
                dbg.location(40,25);
                // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:40:25: ^( PROGRAM ( function )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(40,27);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                dbg.location(40,35);
                if ( !(stream_function.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_function.hasNext() ) {
                    dbg.location(40,35);
                    adaptor.addChild(root_1, stream_function.nextTree());

                }
                stream_function.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(40, 45);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "program");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "program"

    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function"
    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:42:1: function : 'function' Symbol ':' definition -> ^( FUNCTION ^( NOM Symbol ) definition ) ;
    public final WhileParser.function_return function() throws RecognitionException {
        WhileParser.function_return retval = new WhileParser.function_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal3=null;
        Token Symbol4=null;
        Token char_literal5=null;
        WhileParser.definition_return definition6 = null;


        Object string_literal3_tree=null;
        Object Symbol4_tree=null;
        Object char_literal5_tree=null;
        RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");
        try { dbg.enterRule(getGrammarFileName(), "function");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(42, 1);

        try {
            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:43:2: ( 'function' Symbol ':' definition -> ^( FUNCTION ^( NOM Symbol ) definition ) )
            dbg.enterAlt(1);

            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:43:4: 'function' Symbol ':' definition
            {
            dbg.location(43,4);
            string_literal3=(Token)match(input,29,FOLLOW_29_in_function210);  
            stream_29.add(string_literal3);

            dbg.location(43,15);
            Symbol4=(Token)match(input,Symbol,FOLLOW_Symbol_in_function212);  
            stream_Symbol.add(Symbol4);

            dbg.location(43,22);
            char_literal5=(Token)match(input,30,FOLLOW_30_in_function214);  
            stream_30.add(char_literal5);

            dbg.location(43,26);
            pushFollow(FOLLOW_definition_in_function216);
            definition6=definition();

            state._fsp--;

            stream_definition.add(definition6.getTree());


            // AST REWRITE
            // elements: Symbol, definition
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 43:37: -> ^( FUNCTION ^( NOM Symbol ) definition )
            {
                dbg.location(43,40);
                // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:43:40: ^( FUNCTION ^( NOM Symbol ) definition )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(43,42);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCTION, "FUNCTION"), root_1);

                dbg.location(43,51);
                // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:43:51: ^( NOM Symbol )
                {
                Object root_2 = (Object)adaptor.nil();
                dbg.location(43,53);
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(NOM, "NOM"), root_2);

                dbg.location(43,57);
                adaptor.addChild(root_2, stream_Symbol.nextNode());

                adaptor.addChild(root_1, root_2);
                }
                dbg.location(43,65);
                adaptor.addChild(root_1, stream_definition.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(43, 76);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "function");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "function"

    public static class definition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "definition"
    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:45:1: definition : 'read' input '%' commands '%' 'write' output -> input commands output ;
    public final WhileParser.definition_return definition() throws RecognitionException {
        WhileParser.definition_return retval = new WhileParser.definition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal7=null;
        Token char_literal9=null;
        Token char_literal11=null;
        Token string_literal12=null;
        WhileParser.input_return input8 = null;

        WhileParser.commands_return commands10 = null;

        WhileParser.output_return output13 = null;


        Object string_literal7_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;
        Object string_literal12_tree=null;
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
        RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
        RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");
        try { dbg.enterRule(getGrammarFileName(), "definition");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(45, 1);

        try {
            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:46:2: ( 'read' input '%' commands '%' 'write' output -> input commands output )
            dbg.enterAlt(1);

            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:46:4: 'read' input '%' commands '%' 'write' output
            {
            dbg.location(46,4);
            string_literal7=(Token)match(input,31,FOLLOW_31_in_definition240);  
            stream_31.add(string_literal7);

            dbg.location(46,11);
            pushFollow(FOLLOW_input_in_definition242);
            input8=input();

            state._fsp--;

            stream_input.add(input8.getTree());
            dbg.location(46,17);
            char_literal9=(Token)match(input,32,FOLLOW_32_in_definition244);  
            stream_32.add(char_literal9);

            dbg.location(46,21);
            pushFollow(FOLLOW_commands_in_definition246);
            commands10=commands();

            state._fsp--;

            stream_commands.add(commands10.getTree());
            dbg.location(46,30);
            char_literal11=(Token)match(input,32,FOLLOW_32_in_definition248);  
            stream_32.add(char_literal11);

            dbg.location(46,34);
            string_literal12=(Token)match(input,33,FOLLOW_33_in_definition250);  
            stream_33.add(string_literal12);

            dbg.location(46,42);
            pushFollow(FOLLOW_output_in_definition252);
            output13=output();

            state._fsp--;

            stream_output.add(output13.getTree());


            // AST REWRITE
            // elements: commands, output, input
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 46:49: -> input commands output
            {
                dbg.location(46,52);
                adaptor.addChild(root_0, stream_input.nextTree());
                dbg.location(46,58);
                adaptor.addChild(root_0, stream_commands.nextTree());
                dbg.location(46,67);
                adaptor.addChild(root_0, stream_output.nextTree());

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(46, 73);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "definition");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "definition"

    public static class input_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "input"
    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:48:1: input : ( inputSub -> inputSub | -> ^( INPUTS ) );
    public final WhileParser.input_return input() throws RecognitionException {
        WhileParser.input_return retval = new WhileParser.input_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        WhileParser.inputSub_return inputSub14 = null;


        RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");
        try { dbg.enterRule(getGrammarFileName(), "input");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(48, 1);

        try {
            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:49:2: ( inputSub -> inputSub | -> ^( INPUTS ) )
            int alt2=2;
            try { dbg.enterDecision(2, decisionCanBacktrack[2]);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==Variable) ) {
                alt2=1;
            }
            else if ( (LA2_0==32) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:49:4: inputSub
                    {
                    dbg.location(49,4);
                    pushFollow(FOLLOW_inputSub_in_input271);
                    inputSub14=inputSub();

                    state._fsp--;

                    stream_inputSub.add(inputSub14.getTree());


                    // AST REWRITE
                    // elements: inputSub
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 49:13: -> inputSub
                    {
                        dbg.location(49,16);
                        adaptor.addChild(root_0, stream_inputSub.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:49:27: 
                    {

                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 49:27: -> ^( INPUTS )
                    {
                        dbg.location(49,30);
                        // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:49:30: ^( INPUTS )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        dbg.location(49,32);
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUTS, "INPUTS"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(49, 39);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "input");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "input"

    public static class inputSub_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "inputSub"
    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:52:1: inputSub : Variable ( ',' inputSub )? -> ^( INPUTS ( Variable )* ) ;
    public final WhileParser.inputSub_return inputSub() throws RecognitionException {
        WhileParser.inputSub_return retval = new WhileParser.inputSub_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Variable15=null;
        Token char_literal16=null;
        WhileParser.inputSub_return inputSub17 = null;


        Object Variable15_tree=null;
        Object char_literal16_tree=null;
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
        RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");
        try { dbg.enterRule(getGrammarFileName(), "inputSub");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(52, 1);

        try {
            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:53:2: ( Variable ( ',' inputSub )? -> ^( INPUTS ( Variable )* ) )
            dbg.enterAlt(1);

            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:53:4: Variable ( ',' inputSub )?
            {
            dbg.location(53,4);
            Variable15=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub294);  
            stream_Variable.add(Variable15);

            dbg.location(53,13);
            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:53:13: ( ',' inputSub )?
            int alt3=2;
            try { dbg.enterSubRule(3);
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==34) ) {
                alt3=1;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:53:14: ',' inputSub
                    {
                    dbg.location(53,14);
                    char_literal16=(Token)match(input,34,FOLLOW_34_in_inputSub297);  
                    stream_34.add(char_literal16);

                    dbg.location(53,18);
                    pushFollow(FOLLOW_inputSub_in_inputSub299);
                    inputSub17=inputSub();

                    state._fsp--;

                    stream_inputSub.add(inputSub17.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(3);}



            // AST REWRITE
            // elements: Variable
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 53:29: -> ^( INPUTS ( Variable )* )
            {
                dbg.location(53,32);
                // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:53:32: ^( INPUTS ( Variable )* )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(53,34);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUTS, "INPUTS"), root_1);

                dbg.location(53,41);
                // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:53:41: ( Variable )*
                while ( stream_Variable.hasNext() ) {
                    dbg.location(53,41);
                    adaptor.addChild(root_1, stream_Variable.nextNode());

                }
                stream_Variable.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(53, 51);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "inputSub");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "inputSub"

    public static class output_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "output"
    // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:55:1: output : Variable ( ',' output )? -> ^( OUTPUTS ( Variable )+ ) ;
    public final WhileParser.output_return output() throws RecognitionException {
        WhileParser.output_return retval = new WhileParser.output_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Variable18=null;
        Token char_literal19=null;
        WhileParser.output_return output20 = null;


        Object Variable18_tree=null;
        Object char_literal19_tree=null;
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
        RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
        try { dbg.enterRule(getGrammarFileName(), "output");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(55, 1);

        try {
            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:56:2: ( Variable ( ',' output )? -> ^( OUTPUTS ( Variable )+ ) )
            dbg.enterAlt(1);

            // C:\\Users\\erwan\\Documents\\Cours\\4-ESIR\\4A\\S7\\TLC\\TP\\Projet\\Projet_TLC\\Grammar\\While.g:56:4: Variable ( ',' output )?
            {
            dbg.location(56,4);
            Variable18=(Token)match(input,Variable,FOLLOW_Variable_in_output321);  
            stream_Variable.add(Variable18);
